[package]
name = "fralda"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["macros"] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["macros", "rt", "signal"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
